--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers=
 setup_requires=
     pytest-runner
 install_requires=
-    gym>=0.26
+    gymnasium
     numpy
     pygame>=2.0.2
     matplotlib
@@ -40,7 +40,7 @@ exclude =
     scripts
 
 [options.entry_points]
-gym.envs =
+gymnasium.envs =
     __root__ = highway_env.__init__:register_highway_envs
 
 [aliases]
